# semantic-data-association-tool

./: CMakeLists.txt  DataStruct.h  LICENSE  README.md  autodataassociation.cpp  autodataassociation.h  config.yaml  dataprocess_utils.cpp  dataprocess_utils.h  instance.cpp  instance.h  instanceAnnotation.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utility.cpp  utility.h  visualize.cpp  visualize.h
data/: instances.txt
